fixes spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,7 +121,7 @@ h6 {
 }
 
 .stellar-vid {
-    margin: 6em 0 6em 0;
+    margin: 6em 0 3em 0;
     box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.1);
 }
 
